Changes to end-buy page + fix for wrong padding of subtitle on landing page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -104,6 +104,10 @@ font-weight: bolder;
     padding-top: 12rem !important;
   }
 
+  .jumbotron .subtitle {
+    margin-right: 4rem;
+  }
+
   header .entry-choice {
     margin-right: 4rem;
   }
